--- a/style.css
+++ b/style.css
@@ -1,33 +1,52 @@
 body {
-    background: url("applefarm.jpg") no-repeat;
-    background-size: cover;
-    font-family: Arial;
-    color: aliceblue;
+     background: url("applefarm.jpg") no-repeat;
+     background-size: cover;
+     font-family: Arial;
+     color: aliceblue;
 
-}
+ }
+
+
 ul {
     margin: 0px;
     padding: 0px;
     list-style: none;
 }
+
+
 ul li {
     float: right;
     width: 200px;
     height: 40px;
-    opacity: .8;
     line-height: 40px;
     text-align: center;
     font-size: 20px;
 }
+
+
 ul li a{
     text-decoration: none;
     color: black;
     display: block;
 }
 
+
 ul li ul li{
     display: none;
 }
+
+
 ul li:hover ul li{
     display: block;
+
+
+}
+
+ul li a:hover{
+    color:white;
+}
+
+
+h1 {
+    color: black;
 }
